pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: loadup
  namespace: covid
spec:
  imagePullSecrets:
  - name: regcred
  containers:
  - name: load
    image: ghcr.io/arbuckle/covid:4
    command: ["python", "load_pop.py"] # then run this
    # command: ["python", "load.py"] # run this first
  restartPolicy: Never
